Change return type String[] from string[] to string[]?
A java method which returns String[] is now mapped to ballerina method
which returns string[]?. This way ballerina code can handle null
values returned by the Java code.

An instance or a static field with type String[] is now mapped to
ballerina method with return type string[]?. This way ballerina code
can handle null values set to fields of type String[].